--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Habit Track</string>
     <string name="load_habits">Load Habits</string>
-    <string name="clear_lists">Clear Habits</string>
+    <string name="clear_habits">Clear Habits</string>
     <string name="new_habit">New Habit</string>
     <string name="loading">Loading…</string>
 </resources>
