--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="save_habit">Save</string>
     <string name="edit_habit">Edit</string>
     <string name="habit_notes">Notes</string>
+    <string name="numerical_input_hint">123</string>
 </resources>
