--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="habit_notes">Notes</string>
     <string name="numerical_input_hint">123</string>
     <string name="dash">-</string>
+    <string name="arrow_left"><![CDATA[<]]></string>
+    <string name="arrow_right"><![CDATA[>]]></string>
+    <string name="today">Today</string>
 </resources>
